# python-from-zero-2025

./: .pre-commit-config.yaml  README.md  day01_medium_universal.py  pyproject.toml
2026_january_basics/: day01_easy.py  day01_hard.py  day01_medium.py  day01_rep_01_basic_operations.py  day01_variables_and_types.py  day_easy_universal.py
Practice/: main.py
week01_basics/: hello.py
week02_types/: types_demo.py
