[tool.poetry]
name = "python-from-zero"
version = "0.1.0"
description = "Мой путь от нуля до senior Python + DevOps"
authors = ["Ваше имя <ваш@email>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"
black = "^25.0"
isort = "^5.13"
mypy = "^1.13"
pytest = "^8.3"
pytest-cov = "^6.0"
pre-commit = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_decorators = true